# RP2040_Sensor_Manager

./: CMakeLists.txt  README.md  Tricorder_AS7341.cpp  Tricorder_AS7341.h  Tricorder_BME688.cpp  Tricorder_BME688.h  Tricorder_LTR390.cpp  Tricorder_LTR390.h  Tricorder_PMSA003I.cpp  Tricorder_PMSA003I.h  Tricorder_SCD41.cpp  Tricorder_SCD41.h  Tricorder_Sensor.cpp  Tricorder_Sensor.h  Tricorder_TLV493D.cpp  Tricorder_TLV493D.h  sensor_manager.cpp  serial_input_scratch.txt  serial_output_log.txt
